--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
-bin/
 build/
 develop-eggs/
 dist/
@@ -42,9 +41,13 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+# Komodostuff
+*.komodoproject
+*.komodotools
+
 venv
 *.pyc
-staticfiles
+#staticfiles
 *local_settings.py
 local_settings.py
 local_settings
