--- a/static/bower.json
+++ b/static/bower.json
@@ -69,7 +69,8 @@
     "ng-group": "~0.9.0",
     "angular-input-masks": "~1.4.2",
     "angular-filter": "~0.5.4",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "angular-chosen-localytics": "~1.0.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
@@ -82,6 +83,12 @@
         "chosen.css"
       ]
     },
+    // "chosen": {
+    //   "main": [
+    //     "chosen.jquery.js",
+    //     "chosen.css"
+    //   ]
+    // },    
     "rickshaw": {
       "main": [
         "rickshaw.js",
