--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ node_modules
 .tmp
 .sass-cache
 builds/**/images/*
-email_info.py
 .Python
 env/
 develop-eggs/
@@ -58,6 +57,9 @@ uploads/
 *local_settings.py
 local_settings.py
 local_settings
+*email_info.py
+email_info.py
+email_info
 *.db
 *db
 db
