--- a/static/bower.json
+++ b/static/bower.json
@@ -26,7 +26,7 @@
     "angular-fontawesome": "~0.1.2",
     "font-awesome": "~4.2.0",
     "weather-icons": "~1.3.2",
-    "angular-bootstrap": "~0.12.0",
+    "angular-bootstrap": "~0.13.4",
     "jquery.slimscroll": "~1.3.1",
     "animate.css": "~3.2.0",
     "jquery.sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
@@ -74,7 +74,8 @@
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16"
+    "angular-scenario": "1.2.16",
+    "angular-bootstrap": "~0.13.4"
   },
   "overrides": {
     "chosen": {
@@ -82,7 +83,7 @@
         "chosen.jquery.js",
         "chosen.css"
       ]
-    },  
+    },
     "rickshaw": {
       "main": [
         "rickshaw.js",
